public/lite/api/en/r1.6/_sources/generate/file_include_core_utils_visible.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_core_utils_visible.h:

File visible.h
==============

|exhale_lsh| :ref:`Parent directory <dir_include_core_utils>` (``include/core/utils``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/core/utils/visible.h``)
---------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_core_utils_visible.h.rst







Included By
-----------


- :ref:`file_include_core_api_ir_func_graph.h`

- :ref:`file_include_core_api_ir_func_graph_manager.h`

- :ref:`file_include_core_base_base.h`

- :ref:`file_include_core_ir_scope.h`

- :ref:`file_include_core_utils_info.h`

- :ref:`file_include_core_utils_log_adapter.h`




Defines
-------


- :ref:`exhale_define_visible.h_MS_CORE_API-1`

- :ref:`exhale_define_visible.h_MS_EXPORT-1`

- :ref:`exhale_define_visible.h_MS_LOCAL-1`

